--- a/haveheart/style.css
+++ b/haveheart/style.css
@@ -1,22 +1,32 @@
-body{
-    background-image: url('105bw.jpg');
-    background-size: cover;
-}
-header{
-    font-size: 40px;
-    font-family: Impact, Haettenschweiler, 'Arial Bold', sans-serif;
-    text-align: center;
-    background-color: rgba(0, 0, 0, 0.301);
-}
-.bio{
-    align-items: center;
-    
+body {
+  background-image: url('105bw.jpg');
+  background-size: contain;
+  
 }
 
-p{
-    background-color: rgba(0, 0, 0, 0.301);
+header {
+  font-size: 40px;
+  font-family: Impact, Haettenschweiler, 'Arial Bold', sans-serif;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.301);
 }
-a{
-    font-size: 30px;
-    text-align: center;
+
+.bio {
+  width: 50%;
+  padding: 20px;
+  float: left;
+  text-align: center;
+}
+.bio .article_title{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.text {
+  background-color: rgba(0, 0, 0, 0.301);
+}
+
+a {
+  font-size: 30px;
+  color: black;
 }
